--- a/develop/java/jms/activemq/source/sandbox-jms/JMS-ACTIVEMQ-SPRING/src/main/resources/application.properties
+++ b/develop/java/jms/activemq/source/sandbox-jms/JMS-ACTIVEMQ-SPRING/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-#spring.activemq.broker-url=tcp://localhost:61616
-#spring.activemq.user=admin
-#spring.activemq.password=admin
+#spring.activemq.broker-url=vm://embedded?broker.persistent=false,useShutdownHook=false
+#spring.activemq.packages.trust-all=true
+#spring.activemq.packages.trusted=com.lxgolovin.sandbox
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
